chore(homepage): add usediagram.com

--- a/theme/index.html
+++ b/theme/index.html
@@ -21,7 +21,24 @@
   </section>
 
   <section class="container">
+    <div>
+      🎯 I'm currently building
+      <a href="https://usediagram.com" target="_blank">usediagram.com</a> - The
+      PlantUML editor with AI powered
+    </div>
+    <a href="/img/usediagram-com.png">
+      <img src="/img/usediagram-com.png" alt="UseDiagram.com" />
+    </a>
+  </section>
+
+  <section class="container">
     <h4>Featured links</h4>
+    <div>
+      <a href="https://usediagram.com" target="_blank"
+        ><strong>UseDiagram.com</strong></a
+      >
+      <span class="c-gray">PlantUML editor with AI powered</span>
+    </div>
     <div>
       <a href="https://myweek.thien.dev" target="_blank"
         ><strong>MyWeek</strong></a
