--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -48,7 +48,7 @@
 
   <body>
     <div class="_giraffe">
-      <div class="site-header">
+      <div class="site-header container">
         <a href="/">> thien.dev</a>
         <div class="flex items-center">
           <nav class="site-header-nav">
