--- a/theme/index.html
+++ b/theme/index.html
@@ -2,37 +2,21 @@
 <main>
   <section id="hero" class="container">
     <p>
-      Hi! I'm <strong class="text-italic">Thien</strong>. Welcome to my space on
-      the internet. I'm a software engineer who enjoys making products for the
-      modern web. You can find me on
-      <a
-        href="https://twitter.com/hey_thien"
-        target="_blank"
-        class="text-italic"
+      Hi! I'm <strong>Thien</strong>. Welcome to my space on the internet. I'm a
+      software engineer who enjoys making products for the modern web. You can
+      find me on
+      <a href="https://twitter.com/hey_thien" target="_blank"
         ><strong>Twitter</strong></a
       >
       &
-      <a href="https://github.com/tatthien" target="_blank" class="text-italic"
+      <a href="https://github.com/tatthien" target="_blank"
         ><strong>GitHub</strong></a
-      >. I occasionally
-      <a href="/posts" class="text-italic"><strong>write</strong></a>
-      about my random thoughts, technical notes, and short stories.
+      >. I occasionally <a href="/posts"><strong>write</strong></a> about my
+      random thoughts, technical notes, and short stories.
     </p>
   </section>
 
   <section class="container">
-    <div>
-      🎯 I'm currently building
-      <a href="https://usediagram.com" target="_blank">usediagram.com</a> - The
-      PlantUML editor with AI powered
-    </div>
-    <a href="/img/usediagram-com.png">
-      <img src="/img/usediagram-com.png" alt="UseDiagram.com" />
-    </a>
-  </section>
-
-  <section class="container">
-    <h4>Featured links</h4>
     <div>
       <a href="https://usediagram.com" target="_blank"
         ><strong>UseDiagram.com</strong></a
