chore: add section /now

--- a/theme/index.html
+++ b/theme/index.html
@@ -15,7 +15,12 @@
       random thoughts, technical notes, and short stories.
     </p>
   </section>
-
+  <div class="divider"></div>
+  <section class="container">
+    <h3>/now</h3>
+    <p>Web3, Blockchain, Next.js, React</p>
+  </section>
+  <div class="divider"></div>
   <section class="container">
     <div>
       <a href="https://usediagram.com" target="_blank"
