--- a/theme/index.html
+++ b/theme/index.html
@@ -1,8 +1,9 @@
 {{define "extra_head"}}{{end}} {{define "content"}}
 <main>
-  <section id="hero" class="container">
+  <section class="container">
+    <h3>/hello</h3>
     <p>
-      Hi! I'm <strong>Thien</strong>. Welcome to my space on the internet. I'm a
+      I'm <strong>Thien</strong>. Welcome to my space on the internet. I'm a
       software engineer who enjoys making products for the modern web. You can
       find me on
       <a href="https://twitter.com/hey_thien" target="_blank"
