--- a/theme/posts.html
+++ b/theme/posts.html
@@ -1,8 +1,7 @@
 {{define "extra_head"}}{{end}} {{define "content"}}
 <main>
   <section class="container">
-    <h2 class="mb-1">📝 Posts</h2>
-    <div class="mb-4 c-gray">My random thoughts, notes and short stories.</div>
+    <h1>Posts</h1>
   </section>
   <div class="divider"></div>
   <section id="posts" class="container">
