chore: update post link

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -53,7 +53,7 @@
           <a href="/">> thien.dev</a>
           <div class="flex items-center">
             <nav class="site-header-nav">
-              <a href="/posts">Posts</a>
+              <a href="https://wiki.thien.dev">Wiki</a>
               <a href="/resume.pdf">Resume</a>
             </nav>
             <label for="theme" class="theme-switch-button">
@@ -162,7 +162,7 @@
         {
           theme: "system",
         },
-        handler
+        handler,
       );
 
       reactive.theme = localStorage.getItem("theme") || "light";
