--- a/theme/index.html
+++ b/theme/index.html
@@ -12,7 +12,8 @@
       &
       <a href="https://github.com/tatthien" target="_blank"
         ><strong>GitHub</strong></a
-      >. I occasionally <a href="/posts"><strong>write</strong></a> about my
+      >. I occasionally
+      <a href="https://wiki.thien.dev"><strong>write</strong></a> about my
       random thoughts, technical notes, and short stories.
     </p>
   </section>
