--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Cousine&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="/css/app.css" />
     <link
       rel="icon"
