chore: update project items link

--- a/theme/index.html
+++ b/theme/index.html
@@ -25,40 +25,27 @@
 
   <section class="container">
     <h3>Projects</h3>
-    <div class="work">
+    <a href="https://12-px.com" class="work">
       <div>
-        <a href="https://usediagram.com" target="_blank"
-          ><strong>UseDiagram.com</strong></a
-        >
-        <div class="c-gray">PlantUML editor with AI powered</div>
-      </div>
-      <div class="meta">Web App</div>
-    </div>
-    <div class="work">
-      <div>
-        <a href="https://12-px.com" target="_blank"
-          ><strong>12-px.com</strong></a
-        >
+        <strong>12-px</strong>
         <div class="c-gray">Hand-crafted products for the modern web</div>
       </div>
       <div class="meta">Studio</div>
-    </div>
-    <div class="work">
+    </a>
+    <a href="https://12bit.vn" class="work">
       <div>
-        <a href="https://12bit.vn" target="_blank"><strong>12bit</strong></a>
+        <strong>12bit</strong>
         <div class="c-gray">Write and share to learn</div>
       </div>
       <div class="meta">Blog</div>
-    </div>
-    <div class="work">
+    </a>
+    <a href="https://stickerbear.vn" class="work">
       <div>
-        <a href="https://stickerbear.vn" target="_blank"
-          ><strong>Sticker Bear</strong></a
-        >
+        <strong>Sticker Bear</strong>
         <div class="c-gray">Making stickers with love</div>
       </div>
       <div class="meta">Startup</div>
-    </div>
+    </a>
   </section>
 </main>
 {{end}} {{define "extra_footer"}}{{end}} {{template "base.html" .}}
